changes for fixing footer extra margin

--- a/web/rainmaker/packages/citizen/src/ui-containers-local/iframe/index.scss
+++ b/web/rainmaker/packages/citizen/src/ui-containers-local/iframe/index.scss
@@ -1,6 +1,6 @@
 .iframe-style {
   width: 100%;
-  margin-top: -52px;
+  // margin-top: -52px;
 }
 
 @media screen and (max-width: 960px) {
